# Test_task

./: .gitignore  CMakeLists.txt  FastFourierTransform.cpp  FastFourierTransform.h  README.md  ViterbiCodec.cpp  ViterbiCodec.h  main.cpp  main.py
